--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.9",
     "next-images": "^1.8.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
