--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",    
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
+    "gh-pages": "^6.1.1",
     "next-images": "^1.8.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
@@ -30,5 +33,6 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
-  }
+  },
+  "homepage": "https://justniar.github.io/bimbel-bumi-cerdas"
 }
